refactor: emptyMap을 Map.of로 변경